<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Timer" Id="{603a0b4b-ea25-4cbf-bcda-a6f294f440a0}">
    <Declaration><![CDATA[TYPE ST_Timer :
STRUCT
	myTime : TIME := T#10S;
	fbTimeOn : TON := (PT := myTime);
	myBool : BOOL := TRUE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>